set(BUILD_SHARED_LIBS ON)
add_subdirectory(DPP)

set_target_properties(dpp PROPERTIES
	CXX_STANDARD 17
	CXX_EXTENSIONS OFF
	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}
    RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}
	BUILD_SHARED_LIBS OFF
	DPP_INSTALL OFF
	BUILD_VOICE_SUPPORT OFF
	DPP_BUILD_TEST OFF
)

target_link_libraries(${PROJECT_NAME} PRIVATE
	dpp
)

target_include_directories(${PROJECT_NAME} PRIVATE
	libs/DPP/include
)
